[gd_scene load_steps=3 format=3 uid="uid://pu5r3blr0f3g"]

[ext_resource type="Script" path="res://Scenes/Pause_Menu/pause.gd" id="1_kau20"]
[ext_resource type="AudioStream" uid="uid://c1kn0xu2bsurv" path="res://Assets/click-21156 (1).mp3" id="2_v71ug"]

[node name="Pause" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kau20")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -184.0
offset_right = 170.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -86.0
offset_right = 135.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Сохранить"

[node name="Button3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Загрузить"

[node name="Button4" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Выйти"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 71.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "ПАУЗА"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_v71ug")

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
